[package]
name = "maintenance-response"
version = "0.1.3"
edition = "2024"

[dependencies]
file_type = { version = "0.8.8", default-features = false, features = [
  "std",
  "httpd",
] }
headers-accept = "0.3.0"
http = { version = "1.3.1", default-features = false }
http-wasm-guest = "0.8"
log = "0.4.27"
mediatype = "0.21.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
wirefilter-engine = { git = "https://github.com/cloudflare/wirefilter.git", rev = "333d96e5c42e46a36d3323a534bafae54afd2239", features = [
  "regex",
] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 2
strip = true
