[package]
name = "maintenance-response"
version = "0.1.6"
edition = "2024"

[dependencies]
file_type = { version = "0.8.8", default-features = false, features = [
  "std",
  "httpd",
] }
headers-accept = "0.3.0"
http = { version = "1.3.1", default-features = false }
http-wasm-guest = { version = "0.10.3", features = ["log"] }
log = "0.4.27"
mediatype = "0.21.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
wirefilter-engine = { git = "https://github.com/cloudflare/wirefilter.git", rev = "6621924baf36f8ba7f603433dbe6f857ad3d5589", features = [
  "regex",
] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 2
strip = true
